parte de contato finalizada

--- a/ProjetoAM--Site/FiapAM/Views/Contato/GravarErro.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Contato/GravarErro.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "GravarErro";
-    Layout = "~/Views/LayoutPortal.cshtml";
+    Layout = "~/Views/Shared/LayoutPortal.cshtml";
 }
 
 <h2>Ocorreu um erro na gravação das informações de contato.</h2>
