--- a/ProjetoAM--Site/FiapAM/Views/Contato/GravarSucesso.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Contato/GravarSucesso.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "GravarSucesso";
-    Layout = "~/Views/LayoutPortal.cshtml";
+    Layout = "~/Views/Shared/LayoutPortal.cshtml";
 }
 
 <h2>Informações Gravadas com sucesso.</h2>
