--- a/ProjetoAM--Site/FiapAM/Views/Contato/Index.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Contato/Index.cshtml
@@ -36,7 +36,11 @@
 
                         <div class="form-group">
                             <label class="control-label" for="IdTipoContato">Tipo Contato:</label>
-                            @Html.DropDownListFor(model => model.TipoContato.IdTipoContato, new SelectList(ViewBag.ListaTipoContato, "IdTipoContato", "NomeTipoContato"), "Selecione", new { @class = "form-control" })
+                            @Html.DropDownListFor(
+                                model => model.IdTipoContato, 
+                                new SelectList(ViewBag.ListaTipoContato, "IdTipoContato", "NomeTipoContato"), 
+                                "Selecione", 
+                                new { @class = "form-control" })
                         </div>
 
                         <div class="form-group">
