Tentando resolver o problema image

--- a/ProjetoAM--Site/FiapAM/Views/Noticia/Index.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Noticia/Index.cshtml
@@ -48,7 +48,7 @@
                                      
                                 <td class="actions">
                                     <a class="btn btn-success btn-xs" href="@item.Idnoticia">Visualizar</a>
-                                    @Html.ActionLink("Inserir Imagem", "CadastrarImagem", new { id = item.Idnoticia }, new { @class = "btn btn-warning btn-xs" })
+                                    @Html.ActionLink("Inserir Imagem", "InserirImagem", new { id = item.Idnoticia }, new { @class = "btn btn-warning btn-xs" })
                                     @Html.ActionLink("Editar", "Editar", new { id = item.Idnoticia }, new { @class = "btn btn-warning btn-xs" })
                                     @Html.ActionLink("Excluir", "Excluir", new { id = item.Idnoticia }, new { @class = "btn btn-danger btn-xs" })
                                 </td>
