--- a/ProjetoAM--Site/FiapAM/Views/Noticia/Cadastrar.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Noticia/Cadastrar.cshtml
@@ -22,23 +22,23 @@
                     <h2>Noticia</h2>
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @using (Html.BeginForm("Cadastrar", "Noticia", FormMethod.Post))
-                    {
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label" })
-                            @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
-                        </div>
+                        {
+                     <div class="form-group">
+                        @Html.LabelFor(model => model.Titulo, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Titulo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Titulo, "", new { @class = "text-danger" })
+                     </div>
 
-                        <div class="form-group">
-                            <label class="control-label" for="mensagem">Texto - (Conteudo):</label>
-                            @Html.TextAreaFor(model => model.Texto, new { @class = "form-control", @cols = 100, @rows = 2 })
-                            @Html.ValidationMessageFor(model => model.Texto, "", new { @class = "text-danger" })
-                        </div>
-                        
-                        <div class="form-group">
-                            <label class="control-label" for="mensagem">Imagens</label>
-                            <input name="ListaImagem" type="file" />
-                        </div>
+                     <div class="form-group">
+                       <label class="control-label" for="mensagem">Texto - (Conteudo):</label>
+                        @Html.TextAreaFor(model => model.Texto, new { @class = "form-control", @cols = 100, @rows = 2 })
+                        @Html.ValidationMessageFor(model => model.Texto, "", new { @class = "text-danger" })
+                     </div>
+
+                     <div class="form-group">
+                        <label class="control-label" for="mensagem">Selecione a Imagem</label>
+                        <input name="arquivo" type="file" value="" />
+                     </div>
                         <hr>
 
                         @Html.ActionLink("Cancelar", "Index", new object { }, new { @class = "btn btn-default btn-lg" })
