--- a/ProjetoAM--Site/FiapAM/Views/Noticia/InserirImagem.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Noticia/InserirImagem.cshtml
@@ -20,33 +20,30 @@
                 <div class="well">
                     <h2>Noticia</h2>
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @using (Html.BeginForm("Cadastrar", "Noticia", FormMethod.Post))
-    {
-                <div class="form-group">
-                    @Html.LabelFor(model => model.IdNoticia, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.IdNoticia, new { htmlAttributes = new { @class = "form-control" } })
+                    @using (Html.BeginForm("InserirImagem", "Noticia", FormMethod.Post,
+                                    new { enctype = "multipart/form-data" }))
+                                {
 
-                </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.IdImagem, htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.IdImagem, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.IdImagem, "", new { @class = "text-danger" })
+                        </div>
 
-                    <div class="form-group">
-                    <label class="control-label" for="mensagem">Rotulo Imagem</label>
-                    @Html.TextAreaFor(model => model.Rotulo, new { @class = "form-control", @cols = 100, @rows = 2 })
-                    @Html.ValidationMessageFor(model => model.Rotulo, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                    <label class="control-label" for="mensagem">Rotulo Imagem</label>
-                    @Html.TextAreaFor(model => model.Caminho, new { @class = "form-control", @cols = 100, @rows = 2 })
-                    @Html.ValidationMessageFor(model => model.Caminho, "", new { @class = "text-danger" })
-                    </div>
+                        <div class="form-group">
+                            <label class="control-label" for="mensagem">Rotulo:</label>
+                            @Html.TextAreaFor(model => model.Rotulo, new { @class = "form-control", @cols = 100, @rows = 2 })
+                            @Html.ValidationMessageFor(model => model.Rotulo, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="mensagem">Selecione a Imagem</label>
+                            <input name="arquivo" type="file" value="@Html.ValidationMessageFor(model => model.Caminho, "",
+                                                           new { @class = "text-danger" })"/>
+                        </div>
+                        <hr>
 
-                <div class="form-group">
-                    <label class="control-label" for="mensagem">Imagens</label>
-                    <input name="ListaImagem" type="file" />
-                </div>
-                <hr>
-
-                @Html.ActionLink("Cancelar", "Index", new object { }, new { @class = "btn btn-default btn-lg" })
-                <input type="submit" value="Inserir" class="btn btn-primary btn-lg" />
+                        @Html.ActionLink("Cancelar", "Index", new object { }, new { @class = "btn btn-default btn-lg" })
+                        <input type="submit" value="Enviar" class="btn btn-primary btn-lg" />
 
 }
                 </div>
