--- a/ProjetoAM--Site/FiapAM/Views/Shared/LayoutPortal.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Shared/LayoutPortal.cshtml
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>eDenúncia - </title>
+    <title>eDenúncia</title>
     <!-- Bootstrap core CSS -->
     <link href="@Url.Content("~/Content/vendor/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
     <!-- Custom fonts for this template -->
@@ -50,6 +50,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/Contato/">Contato</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/Home/Equipe">Equipe eDenúncia</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/Admin/">Administrador</a>
@@ -126,7 +129,7 @@
     </section>
     <footer>
         <div class="container">
-            <p>&copy; Your Website 2018. All Rights Reserved.</p>
+            <p>&copy; eDenúncia 2018. All Rights Reserved.</p>
             <ul class="list-inline">
                 <li class="list-inline-item">
                     <a href="#">Privacy</a>
