--- a/ProjetoAM--Site/FiapAM/Content/small-business.css
+++ b/ProjetoAM--Site/FiapAM/Content/small-business.css
@@ -10,10 +10,21 @@ body {
 
 .navbar-fixed-top .nav {
     padding: 15px 0;
+
 }
 
 .navbar-fixed-top .navbar-brand {
     padding: 0 15px;
+    background-color: #428bca;
+    -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+    box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+}
+
+.blog-masthead {
+    margin-bottom: 3rem;
+    background-color: #428bca;
+    -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+    box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
 }
 
 .img-portfolio {
