--- a/ProjetoAM--Site/FiapAM/Views/Home/Index.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Home/Index.cshtml
@@ -15,6 +15,10 @@
         </div>
     </div>
 </div>
+    <div align="left">
+        <h3 > Ultimas Noticias</h3>
+    </div>
+    <hr />
 <div id="noticias" class="row view-group">
     
     @foreach (var item in Model)
