--- a/ProjetoAM--Site/FiapAM/Views/Shared/LayoutPortal.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Shared/LayoutPortal.cshtml
@@ -46,7 +46,7 @@
                         <a class="nav-link js-scroll-trigger" href="#download">Download</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#features">Característica</a>
+                        <a class="nav-link js-scroll-trigger" href="/Home/Caracteristicas">Característica</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/Contato/">Contato</a>
@@ -76,7 +76,7 @@
                             <div class="device">
                                 <div class="screen">
                                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
+                                    <img src="@Url.Content("~/Content/img/edenuncia-denuncia.jpg")" class="img-fluid" alt="Parte de Denuncias">
                                 </div>
                                 <div class="button">
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
