Parte da Equipe

--- a/ProjetoAM--Site/FiapAM/Views/Home/Equipe.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Home/Equipe.cshtml
@@ -10,7 +10,7 @@
 
 <section id="team" class="pb-5">
     <div class="container">
-        <h5 class="section-title h1">OUR TEAM</h5>
+        <h5 class="section-title h1">NOSSO TIME</h5>
         <div class="row">
             <!-- Team member -->
             <div class="col-xs-12 col-sm-6 col-md-4">
@@ -19,9 +19,9 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="#" alt="card image"></p>
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.</p>
+                                    <p><img class=" img-fluid" src="https://scontent.fcgh2-1.fna.fbcdn.net/v/t1.0-9/28577029_1593391747417019_5650184999507916966_n.jpg?_nc_cat=111&oh=357823886fd7e467ecd34b1369387af9&oe=5C58A886" alt="card image"></p>
+                                    <h4 class="card-title">Marcelo</h4>
+                                    <p class="card-text">Responsável pelo desenvolvimento da parte WEB.</p>
                                     <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
@@ -29,27 +29,27 @@
                         <div class="backside">
                             <div class="card">
                                 <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Sunlimetech</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
+                                    <h4 class="card-title">Zardo</h4>
+                                    <p class="card-text">Gosto de tecnologia, jogos e tudo que envolva desenvolvimento, aficionado por programação</p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://www.facebook.com/marcelo.zardo.9">
                                                 <i class="fa fa-facebook"></i>
                                             </a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://twitter.com/_marcelozardoo">
                                                 <i class="fa fa-twitter"></i>
                                             </a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-skype"></i>
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://github.com/MarceloZardoBR">
+                                                <i class="fa fa-github"></i>
                                             </a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-google"></i>
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://www.linkedin.com/in/marcelo-zardo-3ab985116/">
+                                                <i class="fa fa-linkedin"></i>
                                             </a>
                                         </li>
                                     </ul>
