--- a/ProjetoAM--Site/FiapAM/Views/Shared/LayoutDashAdmin.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Shared/LayoutDashAdmin.cshtml
@@ -79,8 +79,8 @@
                     <div class="collapse navbar-collapse justify-content-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="#pablo">
-                                    <i class="material-icons">notifications</i> Notifications
+                                <a class="nav-link" >
+                                    <a class="btn btn-dark btn-xs" href="@Url.Content("~/Admin/Logoff")">Sair</a>
                                 </a>
                             </li>
                             <!-- your navbar here -->
