--- a/ProjetoAM--Site/FiapAM/Views/Noticia/Index.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Noticia/Index.cshtml
@@ -21,9 +21,9 @@
             <div class="col-md-12">
 
                 <p class="toolbar">
-                    @Html.ActionLink("Inserir Nova Noticia", "Cadastrar", new object { }, new { @class = "create btn btn-default" })
+                    @Html.ActionLink("Inserir Nova Noticia", "Cadastrar", new object { }, new { @class = "create btn btn-default" })  @TempData["Mensagem"]
                     <br />
-                    
+
                 </p>
                 <table class="table table-striped" cellspacing="0" cellpadding="0">
                     <thead>
