--- a/ProjetoAM--Site/FiapAM/Views/Shared/LayoutNoticia.cshtml
+++ b/ProjetoAM--Site/FiapAM/Views/Shared/LayoutNoticia.cshtml
@@ -45,7 +45,7 @@
                         <a class="nav-link js-scroll-trigger" href="#download">Download</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#features">Característica</a>
+                        <a class="nav-link js-scroll-trigger" href="/Home/Caracteristicas">Característica</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/Contato/">Contato</a>
